--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"serve": "nodemon index.js",
-		"start": "node index.js",
+		"start": "nodemon index.js",
 		"migrations-run": "npx sequelize-cli db:migrate",
 		"migrations-make": "npx sequelize-cli migration:generate --name create_schema"
 	},
@@ -20,6 +20,7 @@
 		"express": "^4.21.0",
 		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^3.11.3",
+		"nodemon": "^3.1.7",
 		"pg": "^8.13.1",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.37.5",
