--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/node": "^22.10.1",
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.4.5",
 		"ejs": "^3.1.10",
 		"express": "^4.21.0",
+		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^3.11.3",
 		"nodemon": "^3.1.7",
 		"pg": "^8.13.1",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.37.5",
-		"sequelize-cli": "^6.6.2"
+		"sequelize-cli": "^6.6.2",
+		"typescript": "^5.7.2"
 	}
 }
