--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"express": "^4.21.0",
 		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.11.3",
 		"nodemon": "^3.1.7",
 		"pg": "^8.13.1",
